# node-RapidOcrOnnx

./: .gitignore  CMakeLists.txt  RapidOcrOnnx.cts  RapidOcrOnnx.d.cts  ocr.cts  package.json  test.ts  tsconfig.json
include/: OcrResultUtils.h  OcrStruct.h  tools.h  utils.h
src/: OcrLite.cpp  OcrLiteNodeAddonApi.cpp  OcrResultUtils.cpp  utils.cpp
test/: detect.ts  server.ts
